# mit_cheetah

./: .gitignore
mit_sim/Cheetah-Software/common/include/ControlParameters/: ControlParameterInterface.h  ControlParameters.h  RobotParameters.h
mit_sim/Cheetah-Software/common/include/Controllers/: ContactEstimator.h  DesiredStateCommand.h  FootSwingTrajectory.h  GaitScheduler.h  LegController.h  OrientationEstimator.h  StateEstimatorContainer.h
mit_sim/Cheetah-Software/common/include/Dynamics/: ActuatorModel.h  DynamicsSimulator.h  spatial.h
mit_sim/Cheetah-Software/common/include/SimUtilities/: SimulatorMessage.h  SpineBoard.h  VisualizationData.h
mit_sim/Cheetah-Software/common/include/Utilities/: utilities.h
mit_sim/Cheetah-Software/common/src/ControlParameters/: ControlParameters.cpp
mit_sim/Cheetah-Software/common/src/Controllers/: DesiredStateCommand.cpp  FootSwingTrajectory.cpp  GaitScheduler.cpp  LegController.cpp
mit_sim/Cheetah-Software/common/src/SimUtilities/: ti_boardcontrol.cpp
mit_sim/Cheetah-Software/common/src/Utilities/: utilities.cpp
mit_sim/Cheetah-Software/common/test/: test_ControlParameters.cpp  test_mini_cheetah_model.cpp  test_yaml.cpp
mit_sim/Cheetah-Software/robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h  SimulationBridge.h
mit_sim/Cheetah-Software/robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp
mit_sim/Cheetah-Software/sim/include/: DrawList.h  SimControlPanel.h
mit_sim/Cheetah-Software/sim/src/: DrawList.cpp  GameController.cpp  Graphics3D.cpp  SimControlPanel.cpp  Simulation.cpp  obj_loader.cpp
mit_sim/Cheetah-Software/user/Example_Leg_InvDyn/: Leg_InvDyn_Controller.cpp  Leg_InvDyn_Controller.hpp  Leg_InvDyn_UserParameters.h  main.cpp
mit_sim/Cheetah-Software/user/JPos_Controller/: JPos_Controller.cpp  JPos_Controller.hpp
mit_sim/Cheetah-Software/user/MIT_Controller/: MIT_Controller.cpp  MIT_Controller.hpp  MIT_UserParameters.h  main.cpp
src/cheetah_ros/: CMakeLists.txt  README.md  package.xml
src/cheetah_ros/common/include/Controllers/: LegController.h
src/cheetah_ros/common/include/Dynamics/: MiniCheetah.h
src/cheetah_ros/common/include/SimUtilities/: ImuSimulator.h  SpineBoard.h
src/cheetah_ros/common/src/ControlParameters/: ControlParameters.cpp
src/cheetah_ros/common/src/Controllers/: GaitScheduler.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
src/cheetah_ros/common/src/SimUtilities/: ImuSimulator.cpp
src/cheetah_ros/config/: mc-mit-ctrl-user-parameters.yaml
src/cheetah_ros/rc_test/: rc_test_main.cpp
src/cheetah_ros/robot/: CMakeLists.txt
src/cheetah_ros/robot/src/: JPosInitializer.cpp  SimulationBridge.cpp  main_helper.cpp
src/cheetah_ros/robot/src/rt/: rt_sbus.cpp
src/cheetah_ros/sim/src/: SimControlPanel.cpp  main.cpp
src/cheetah_ros/user/MIT_Controller/: MIT_Controller.cpp  MIT_Controller.hpp  main.cpp
src/cheetah_ros/user/MIT_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.hpp
src/cheetah_ros/user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Gait.h
src/cheetah_ros/user/MIT_Controller/FSM_States/: ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_Locomotion.h  SafetyChecker.h
src/mit_cheetah_gazebo/: CMakeLists.txt  package.xml
src/mit_cheetah_gazebo/description/: mini_cheetah.sdf  mini_cheetah.urdf  test_mini.urdf
src/mit_cheetah_gazebo/description/config/: ros_control_config.yaml
src/mit_cheetah_gazebo/description/models/mini_cheetah/: Body.stl
src/mit_cheetah_gazebo/launch/: spawn_mini.launch
src/mit_cheetah_gazebo/src/: mini_cheetah_node.cpp
src/mit_unitree/: CMakeLists.txt  package.xml
src/mit_unitree/robot/include/: JPosInitializer.h  RobotRunner.h  SimulationBridge.h
src/mit_unitree/robot/src/: SimulationBridge.cpp
src/mit_unitree/sim/include/: DrawList.h
src/mit_unitree/sim/src/: DrawList.cpp  Simulation.cpp
src/unitree_legged_sdk/include/unitree_legged_sdk/: convert.h  lcm.h  quadruped.h
user/MIT_Controller/: MIT_Controller.cpp  main.cpp
(+38 files in other folders)
